--- a/manuscript/FinalDraft_rev/ReviewResponses.tex
+++ b/manuscript/FinalDraft_rev/ReviewResponses.tex
@@ -71,7 +71,7 @@ and because the third term on the right is the derivative of the log of the sum 
 {\bf Comment 3} The bifurcation the authors call a fold bifurcation is not a fold bifurcation. Figure 1 suggests a pitchfork bifurcation (which is degenerate but will appear in symmetric models). An alternative possibility is that there exists an asymmetric equilibrium with a "dominant state" and a "subordinate state" also at low m, next to the symmetric equilibrium shown at low m in figure 1, so that the system has two stable equilibria; here the "FB" point in figure 1 would be the point where the symmetric equilibrium is destabilized (this is the pattern found by Ronce and Kirkpatrick). This second alternative seems likely to me because the abrupt changes seen in figure 1 and also in figure 5 may well indicate an attractor switch. The nature of the bifurcation should be properly investigated (one can find Jacobians etc with numerical analysis for the deterministic system).
 }
 
-\noindent {\bf Response 3} We agree with the Reviewer that the bifurcation is indeed a Pitchfork bifurcation and thank the Reviewer for pointing to this error. We provide an analysis?
+\noindent {\bf Response 3} Again we thank the Reviewer for pointing out an error in that we incompletely identified the bifurcation as a `Fold bifurcation'. However, we do not think that the bifurcation is a Pitchfork bifurcation, as in discrete time systems, a discrete pitchfork is synonymous with a flip (or period-doubling) bifurcation. Instead, we believe
 
 \noindent \textcolor{cyan}{
 {\bf Comment 4} The ms does not describe how recovery time was measured. The deterministic system returns to an equilibrium asymptotically, i.e., in infinite time. For practice, one defines a return ``close enough" for recovery. The details of this should be given, otherwise the results are not reproducible. Moreover, I think that near the bifurcation point total population size will equilibrate fast, but the distribution of individuals over the two habitats takes a longer time to equilibrate (the system is on the edge between a symmetric and an asymmetric equilibrium). If time to recovery includes the time that $N_1$ and $N_2$ individually reach their steady states, then this can explain the peak of recovery time at the bifurcation; but this does not mean that the total population size takes long to recover. If total population size was monitored, but recovery was interpreted as "return to original" whereas the system attains a different equilibrium (symmetric vs asymmetric, see above), then obviously recovery time will be infinite, but again this does not mean that the population does not recover from near extinction.
