--- a/Manuscript/FinalDraft_rev/aa_kevin.bib
+++ b/Manuscript/FinalDraft_rev/aa_kevin.bib
@@ -1,4 +1,4 @@
-%% Created using Papers on Fri, 02 Jun 2017.
+%% Created using Papers on Fri, 08 Sep 2017.
 %% http://papersapp.com/papers/
 
 @article{Anonymous:2015gf,
@@ -214,6 +214,16 @@ year = {2013},
 volume = {4},
 number = {10},
 pages = {971--981}
+}
+
+@article{Ronce:2001dp,
+author = {Ronce, Oph{\'e}lie and Kirkpatrick, Mark},
+title = {{When sources become sinks: migrational meltdown in heterogeneous habitats}},
+journal = {Evolution},
+year = {2001},
+volume = {55},
+number = {8},
+pages = {1520}
 }
 
 @article{Gibert:tz,
@@ -433,6 +443,7 @@ title = {{Relocation and recolonization of Coho salmon \emph{Oncorhynchus kisutc
 journal = {T Am Fish Soc},
 year = {2017},
 volume = {17},
+number = {5},
 pages = {1--39},
 month = apr
 }
@@ -478,16 +489,6 @@ pages = {2295--2300},
 month = feb
 }
 
-@article{Ciancio:2008p3440,
-author = {Ciancio, JE and Pascual, MA and Botto, F and Frere, E and Iribarne, O},
-title = {{Trophic relationships of exotic anadromous salmonids in the southern Patagonian Shelf as inferred from stable isotopes}},
-journal = {Limnology and Oceanography},
-year = {2008},
-volume = {53},
-number = {2},
-pages = {788--798}
-}
-
 @article{Yeakel:2013vz,
 author = {Yeakel, Justin D and Moore, J W and Guimar{\~a}es Jr, Paulo R and de Aguiar, M A M},
 title = {{Synchronisation and stability in river metapopulation networks}},
@@ -496,6 +497,16 @@ year = {2014},
 volume = {17},
 number = {3},
 pages = {273--283}
+}
+
+@article{Ciancio:2008p3440,
+author = {Ciancio, JE and Pascual, MA and Botto, F and Frere, E and Iribarne, O},
+title = {{Trophic relationships of exotic anadromous salmonids in the southern Patagonian Shelf as inferred from stable isotopes}},
+journal = {Limnology and Oceanography},
+year = {2008},
+volume = {53},
+number = {2},
+pages = {788--798}
 }
 
 @book{Hanski:1999vu,
@@ -691,6 +702,14 @@ pages = {3--30},
 month = sep
 }
 
+@book{AleksandrovichKuznetsov:1995p2580,
+author = {Kuznetsov, Y.A.},
+title = {{Elements of applied bifurcation theory}},
+publisher = {Springer},
+year = {1998},
+address = {New York}
+}
+
 @article{Keefer:2014gg,
 author = {Keefer, Matthew L and Caudill, Christopher C},
 title = {{Homing and straying by anadromous salmonids: a review of mechanisms and rates}},
@@ -776,15 +795,14 @@ pages = {881--900},
 month = jan
 }
 
-@article{Falcy:2014en,
-author = {Falcy, Matthew R},
-title = {{Density-dependent habitat selection of spawning Chinook salmon: broad-scale evidence and implications}},
-journal = {J. Anim. Ecol.},
-year = {2014},
-volume = {84},
-number = {2},
-pages = {n/a--n/a},
-month = oct
+@article{Young:1999ut,
+author = {Young, Kyle A},
+title = {{Managing the decline of Pacific salmon: metapopulation theory and artificial recolonization as ecological mitigation}},
+journal = {Can. J. Fish. Aquat. Sci.},
+year = {1999},
+volume = {56},
+number = {9},
+pages = {1700--1706}
 }
 
 @article{Quinn:2014bg,
@@ -798,14 +816,15 @@ pages = {1--12},
 month = aug
 }
 
-@article{Young:1999ut,
-author = {Young, Kyle A},
-title = {{Managing the decline of Pacific salmon: metapopulation theory and artificial recolonization as ecological mitigation}},
-journal = {Can. J. Fish. Aquat. Sci.},
-year = {1999},
-volume = {56},
-number = {9},
-pages = {1700--1706}
+@article{Falcy:2014en,
+author = {Falcy, Matthew R},
+title = {{Density-dependent habitat selection of spawning Chinook salmon: broad-scale evidence and implications}},
+journal = {J. Anim. Ecol.},
+year = {2014},
+volume = {84},
+number = {2},
+pages = {n/a--n/a},
+month = oct
 }
 
 @article{Shelton:2014br,
@@ -829,6 +848,13 @@ pages = {959--972},
 month = mar
 }
 
+@article{Kuehn:2010tx,
+author = {Kuehn, C. and Siegmund, S. and Gross, T},
+title = {{On the dynamical analysis of evolution equations via generalized models}},
+journal = {Arxiv preprint arXiv:1012.4340},
+year = {2010}
+}
+
 @article{Thompson:2015hq,
 author = {Thompson, John N},
 title = {{Specific Hypotheses on the Geographic Mosaic of Coevolution.}},
@@ -848,13 +874,6 @@ volume = {14},
 number = {9},
 pages = {877--885},
 month = sep
-}
-
-@article{Kuehn:2010tx,
-author = {Kuehn, C. and Siegmund, S. and Gross, T},
-title = {{On the dynamical analysis of evolution equations via generalized models}},
-journal = {Arxiv preprint arXiv:1012.4340},
-year = {2010}
 }
 
 @article{Holling:1973hr,
@@ -1179,17 +1198,6 @@ number = {2},
 pages = {340--347}
 }
 
-@article{Fussmann:2007fo,
-author = {Fussmann, G. F. and Loreau, M and Abrams, P. A.},
-title = {{Eco-Evolutionary Dynamics of Communities and Ecosystems}},
-journal = {Funct. Ecol.},
-year = {2007},
-volume = {21},
-number = {3},
-pages = {465--477},
-month = jun
-}
-
 @article{Wang:2014ec,
 author = {Wang, Shaopeng and Loreau, Michel},
 title = {{Ecosystem stability in space: $\alpha$, $\beta$ and $\gamma$ variability}},
@@ -1199,6 +1207,17 @@ volume = {17},
 number = {8},
 pages = {891--901},
 month = may
+}
+
+@article{Fussmann:2007fo,
+author = {Fussmann, G. F. and Loreau, M and Abrams, P. A.},
+title = {{Eco-Evolutionary Dynamics of Communities and Ecosystems}},
+journal = {Funct. Ecol.},
+year = {2007},
+volume = {21},
+number = {3},
+pages = {465--477},
+month = jun
 }
 
 @article{AndersonMay86,
